feat(bulletin): support multiple monitor IDs and app metrics
Allow defining multiple monitor IDs and application metrics in the bulletin component.
The `monitorIds` property is now an array instead of a single value, and the `metrics`property has been changed to a Set to accommodate multiple metrics. Corresponding changeshave been made in the backend to handle the updated data structures, including adjustmentsin the bulletin service, controller, and entity classes. User interface components havealso been updated to reflect these changes, such as the dropdown render template forselecting monitors.